# xray

./: .gitignore  Cargo.toml  README.md  commitlint.config.mjs  deny.toml  flake.nix
.github/.github/workflows/: typos.yaml
.github/workflows/: commitlint.yaml  rust.yaml
crates/formatted-index-macro/: Cargo.toml
crates/formatted-index-macro/src/: lib.rs
crates/xray/: Cargo.toml
crates/xray-docker/: Cargo.toml
crates/xray-docker/src/: lib.rs
crates/xray-docker/src/api/: chunk_processor.rs  connection.rs  mod.rs  util.rs
crates/xray-docker/src/api/docker_host/: config.rs  constants.rs  context_meta.rs  mod.rs  util.rs
crates/xray-docker/src/docker_host/: context_meta.rs  mod.rs  util.rs
crates/xray-podman/: Cargo.toml
crates/xray-podman/src/: lib.rs  util.rs
crates/xray-podman/src/api/: command_runner.rs  mod.rs
crates/xray/src/: config.rs  keybindings.rs  lib.rs  logging.rs  main.rs
crates/xray/src/image_source/: docker.rs  filesystem.rs  mod.rs  podman.rs
crates/xray/src/parser/: constants.rs  json.rs  mod.rs  seeker.rs  util.rs
crates/xray/src/parser/node/: filter.rs  inner_node.rs  iter.rs  mod.rs  util.rs
crates/xray/src/parser/tree/: iter.rs  mod.rs
crates/xray/src/tui/: action.rs  dispatcher.rs  mod.rs  store.rs  util.rs  view.rs
crates/xray/src/tui/view/: active_pane.rs  command_bar.rs  help_popup.rs  macros.rs  pane.rs  pane_with_popup.rs  side_effect.rs
crates/xray/src/tui/view/pane/: filter_popup.rs  image_info.rs  layer_info.rs  layer_inspector.rs  layer_selector.rs  style.rs  util.rs
crates/xray/src/tui/view/widgets/: mod.rs  pane_with_popup.rs
src/: config.rs  lib.rs  logging.rs  main.rs  parser.rs
src/parser/: constants.rs  json.rs  mod.rs  util.rs
src/parser/tree/: iter.rs  mod.rs
src/tree/: iter.rs  mod.rs
src/tui/: action.rs  actions.rs  dispatcher.rs  mod.rs  store.rs  util.rs  view.rs
src/tui/view/: active_pane.rs  command_bar.rs  help_popup.rs  macros.rs  pane.rs  side_effect.rs
src/tui/view/pane/: image_info.rs  layer_info.rs  layer_inspector.rs  layer_selector.rs  style.rs  util.rs
