[package]
name = "formatted-index-macro"
description = "A small macro that can generate 1-based string indexes for enum variants"
version = "1.0.0"
edition = "2024"
authors = ["h33333333"]
license-file = "../../COPYING"
readme = "../../README.md"
repository = "https://github.com/h33333333/xray"
documentation = "https://github.com/h33333333/xray"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.100"
