[package]
name = "xray-docker"
description = "A collection of Docker-specific utilites, required for xray-tui to work"
authors = ["h33333333"]
license-file = "../../COPYING"
readme = "../../README.md"
repository = "https://github.com/h33333333/xray"
documentation = "https://github.com/h33333333/xray"
version = "0.1.0"
edition = "2024"

[dependencies]
homedir = "0.3.4"
http = "1.3.1"
httparse = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"

[target.'cfg(windows)'.dependencie]
interprocess = "2.2.3"
