[package]
name = "xray-tui"
version = "1.0.0"
edition = "2021"
description = "A Docker (or any OCI-compliant) image layer inspector"
authors = ["h33333333"]
categories = ["command-line-utilities"]
keywords = ["terminal", "tui", "docker", "image", "container"]
license-file = "../../COPYING"
readme = "../../README.md"
repository = "https://github.com/h33333333/xray"
documentation = "https://github.com/h33333333/xray"

[[bin]]
name = "xray"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
arboard = "3.4.1"
clap = { version = "4.5.26", features = ["derive"] }
crossterm = "0.28.1"
dirs = "6.0.0"
indexmap = "2.7.1"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
formatted-index-macro = { workspace = true }
regex = "1.11.1"
tar = "0.4.44"
